--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>{{ page.title }}</title>
+    <title>{{ page.title }} | Lannen Family Recipes</title>
 
     <link rel="stylesheet" href="/assets/css/styles.css">
 
