Link to new recipe issue template with new recipe button.

--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -51,7 +51,7 @@
           <div class="buttons">
             <a
               class="button is-success"
-              href="https://github.com/rosslannen/rosslannen.github.io/issues/new">
+              href="https://github.com/rosslannen/rosslannen.github.io/issues/new?assignees=rosslannen&labels=new+recipe&template=new-recipe-template.md&title=Add+%5BRECIPE%5D">
               Add Recipe
             </a>
 
